Compiler_StudentID_HW2_shu/y.output
   0  $accept : program $end

   1  program : program stat_list
   2          |

   3  stat_list : stat_list stat
   4            |

   5  stat : init_declarator
   6       | compound_stat
   7       | exp SEMICOLON
   8       | print_func
   9       | func_def
  10       | func_declaration
  11       | func_usage
  12       | selection_stat
  13       | iteration_stat
  14       | return_state
  15       | asign_state

  16  init_declarator : Type init_declarator_list SEMICOLON
  17                  | Type ID ASGN exp SEMICOLON

  18  init_declarator_list : vars
  19                       | init_declarator_list COMMA vars

  20  vars : ID
  21       | ID ASGN initializer

  22  initializer : I_CONST
  23              | F_CONST
  24              | STR_CONST
  25              | TRUE
  26              | FALSE

  27  asign_state : ID asgn_type initializer SEMICOLON
  28              | ID asgn_type ID SEMICOLON
  29              | ID asgn_type exp SEMICOLON

  30  return_state : RET exp SEMICOLON
  31               | RET SEMICOLON
  32               | RET TRUE SEMICOLON
  33               | RET FALSE SEMICOLON

  34  selection_stat : IF LB exp RB LCB stat_list RCB
  35                 | IF LB exp RB LCB stat_list RCB ELSE LCB stat_list RCB

  36  func_def : Type ID LB para_list RB LCB compound_stat return_state RCB
  37           | Type ID LB para_list RB LCB return_state RCB
  38           | Type ID LB para_list RB LCB stat_list return_state RCB
  39           | Type ID LB RB LCB compound_stat return_state RCB
  40           | Type ID LB RB LCB stat_list return_state RCB
  41           | Type ID LB RB LCB return_state RCB

  42  func_declaration : Type ID LB para_list RB SEMICOLON

  43  func_usage : ID LB aug_list RB SEMICOLON

  44  para_list : Type ID COMMA para_list
  45            | Type ID

  46  aug_list : aug_list aug
  47           | aug_list COMMA aug
  48           |

  49  aug : ID
  50      | I_CONST
  51      | F_CONST
  52      | STR_CONST
  53      | TRUE
  54      | FALSE

  55  compound_stat : LCB RCB
  56                | LCB stat_list RCB

  57  exp : exp comparison ad_exp
  58      | ad_exp

  59  ad_exp : ad_exp addition mul_exp
  60         | mul_exp

  61  addition : ADD
  62           | SUB

  63  mul_exp : mul_exp multiplication postfix_exp
  64          | postfix_exp

  65  postfix_exp : term postfix

  66  postfix : postfix INC
  67          | postfix DEC
  68          |

  69  term : LB exp RB
  70       | ID
  71       | STR_CONST
  72       | I_CONST
  73       | F_CONST
  74       | SUB I_CONST
  75       | SUB F_CONST
  76       | exp

  77  comparison : MT
  78             | LT
  79             | MTE
  80             | LTE
  81             | EQ
  82             | NE

  83  operation : addition
  84            | multiplication

  85  multiplication : MUL
  86                 | DIV
  87                 | MOD

  88  print_func : PRINT LB STR_CONST RB SEMICOLON
  89             | PRINT LB ID RB SEMICOLON

  90  iteration_stat : WHILE LB exp RB LCB stat RCB

  91  asgn_type : ASGN
  92            | ADDASGN
  93            | SUBASGN
  94            | MULASGN
  95            | DIVASGN
  96            | MODASGN

  97  Type : INT
  98       | FLOAT
  99       | BOOL
 100       | STRING
 101       | VOID

state 0
	$accept : . program $end  (0)
	program : .  (2)

	.  reduce 2

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . stat_list  (1)
	stat_list : .  (4)

	$end  accept
	.  reduce 4

	stat_list  goto 2


2: shift/reduce conflict (shift 3, reduce 1) on PRINT
2: shift/reduce conflict (shift 4, reduce 1) on IF
2: shift/reduce conflict (shift 5, reduce 1) on WHILE
2: shift/reduce conflict (shift 6, reduce 1) on SUB
2: shift/reduce conflict (shift 7, reduce 1) on LB
2: shift/reduce conflict (shift 8, reduce 1) on LCB
2: shift/reduce conflict (shift 9, reduce 1) on RET
2: shift/reduce conflict (shift 10, reduce 1) on I_CONST
2: shift/reduce conflict (shift 11, reduce 1) on F_CONST
2: shift/reduce conflict (shift 12, reduce 1) on STR_CONST
2: shift/reduce conflict (shift 13, reduce 1) on INT
2: shift/reduce conflict (shift 14, reduce 1) on STRING
2: shift/reduce conflict (shift 15, reduce 1) on FLOAT
2: shift/reduce conflict (shift 16, reduce 1) on BOOL
2: shift/reduce conflict (shift 17, reduce 1) on VOID
2: shift/reduce conflict (shift 18, reduce 1) on ID
state 2
	program : program stat_list .  (1)
	stat_list : stat_list . stat  (3)

	PRINT  shift 3
	IF  shift 4
	WHILE  shift 5
	SUB  shift 6
	LB  shift 7
	LCB  shift 8
	RET  shift 9
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	INT  shift 13
	STRING  shift 14
	FLOAT  shift 15
	BOOL  shift 16
	VOID  shift 17
	ID  shift 18
	$end  reduce 1

	init_declarator  goto 19
	func_declaration  goto 20
	Type  goto 21
	stat  goto 22
	compound_stat  goto 23
	exp  goto 24
	print_func  goto 25
	func_def  goto 26
	func_usage  goto 27
	selection_stat  goto 28
	iteration_stat  goto 29
	return_state  goto 30
	asign_state  goto 31
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 3
	print_func : PRINT . LB STR_CONST RB SEMICOLON  (88)
	print_func : PRINT . LB ID RB SEMICOLON  (89)

	LB  shift 36
	.  error


state 4
	selection_stat : IF . LB exp RB LCB stat_list RCB  (34)
	selection_stat : IF . LB exp RB LCB stat_list RCB ELSE LCB stat_list RCB  (35)

	LB  shift 37
	.  error


state 5
	iteration_stat : WHILE . LB exp RB LCB stat RCB  (90)

	LB  shift 38
	.  error


state 6
	term : SUB . I_CONST  (74)
	term : SUB . F_CONST  (75)

	I_CONST  shift 39
	F_CONST  shift 40
	.  error


state 7
	term : LB . exp RB  (69)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 42
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


8: shift/reduce conflict (shift 43, reduce 4) on RCB
state 8
	compound_stat : LCB . RCB  (55)
	compound_stat : LCB . stat_list RCB  (56)
	stat_list : .  (4)

	RCB  shift 43
	PRINT  reduce 4
	IF  reduce 4
	WHILE  reduce 4
	SUB  reduce 4
	LB  reduce 4
	LCB  reduce 4
	RET  reduce 4
	I_CONST  reduce 4
	F_CONST  reduce 4
	STR_CONST  reduce 4
	INT  reduce 4
	STRING  reduce 4
	FLOAT  reduce 4
	BOOL  reduce 4
	VOID  reduce 4
	ID  reduce 4

	stat_list  goto 44


state 9
	return_state : RET . exp SEMICOLON  (30)
	return_state : RET . SEMICOLON  (31)
	return_state : RET . TRUE SEMICOLON  (32)
	return_state : RET . FALSE SEMICOLON  (33)

	SUB  shift 6
	LB  shift 7
	SEMICOLON  shift 45
	TRUE  shift 46
	FALSE  shift 47
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 48
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 10
	term : I_CONST .  (72)

	.  reduce 72


state 11
	term : F_CONST .  (73)

	.  reduce 73


state 12
	term : STR_CONST .  (71)

	.  reduce 71


state 13
	Type : INT .  (97)

	.  reduce 97


state 14
	Type : STRING .  (100)

	.  reduce 100


state 15
	Type : FLOAT .  (98)

	.  reduce 98


state 16
	Type : BOOL .  (99)

	.  reduce 99


state 17
	Type : VOID .  (101)

	.  reduce 101


state 18
	asign_state : ID . asgn_type initializer SEMICOLON  (27)
	asign_state : ID . asgn_type ID SEMICOLON  (28)
	asign_state : ID . asgn_type exp SEMICOLON  (29)
	func_usage : ID . LB aug_list RB SEMICOLON  (43)
	term : ID .  (70)

	LB  shift 49
	ASGN  shift 50
	ADDASGN  shift 51
	SUBASGN  shift 52
	MULASGN  shift 53
	DIVASGN  shift 54
	MODASGN  shift 55
	ADD  reduce 70
	SUB  reduce 70
	MUL  reduce 70
	DIV  reduce 70
	MOD  reduce 70
	INC  reduce 70
	DEC  reduce 70
	MT  reduce 70
	LT  reduce 70
	MTE  reduce 70
	LTE  reduce 70
	EQ  reduce 70
	NE  reduce 70
	SEMICOLON  reduce 70

	asgn_type  goto 56


state 19
	stat : init_declarator .  (5)

	.  reduce 5


state 20
	stat : func_declaration .  (10)

	.  reduce 10


state 21
	init_declarator : Type . init_declarator_list SEMICOLON  (16)
	init_declarator : Type . ID ASGN exp SEMICOLON  (17)
	func_def : Type . ID LB para_list RB LCB compound_stat return_state RCB  (36)
	func_def : Type . ID LB para_list RB LCB return_state RCB  (37)
	func_def : Type . ID LB para_list RB LCB stat_list return_state RCB  (38)
	func_def : Type . ID LB RB LCB compound_stat return_state RCB  (39)
	func_def : Type . ID LB RB LCB stat_list return_state RCB  (40)
	func_def : Type . ID LB RB LCB return_state RCB  (41)
	func_declaration : Type . ID LB para_list RB SEMICOLON  (42)

	ID  shift 57
	.  error

	vars  goto 58
	init_declarator_list  goto 59


state 22
	stat_list : stat_list stat .  (3)

	.  reduce 3


state 23
	stat : compound_stat .  (6)

	.  reduce 6


24: shift/reduce conflict (shift 60, reduce 76) on MT
24: shift/reduce conflict (shift 61, reduce 76) on LT
24: shift/reduce conflict (shift 62, reduce 76) on MTE
24: shift/reduce conflict (shift 63, reduce 76) on LTE
24: shift/reduce conflict (shift 64, reduce 76) on EQ
24: shift/reduce conflict (shift 65, reduce 76) on NE
24: shift/reduce conflict (shift 66, reduce 76) on SEMICOLON
state 24
	stat : exp . SEMICOLON  (7)
	exp : exp . comparison ad_exp  (57)
	term : exp .  (76)

	MT  shift 60
	LT  shift 61
	MTE  shift 62
	LTE  shift 63
	EQ  shift 64
	NE  shift 65
	SEMICOLON  shift 66
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	MOD  reduce 76
	INC  reduce 76
	DEC  reduce 76

	comparison  goto 67


state 25
	stat : print_func .  (8)

	.  reduce 8


state 26
	stat : func_def .  (9)

	.  reduce 9


state 27
	stat : func_usage .  (11)

	.  reduce 11


state 28
	stat : selection_stat .  (12)

	.  reduce 12


state 29
	stat : iteration_stat .  (13)

	.  reduce 13


state 30
	stat : return_state .  (14)

	.  reduce 14


state 31
	stat : asign_state .  (15)

	.  reduce 15


32: shift/reduce conflict (shift 68, reduce 58) on ADD
32: shift/reduce conflict (shift 69, reduce 58) on SUB
state 32
	exp : ad_exp .  (58)
	ad_exp : ad_exp . addition mul_exp  (59)

	ADD  shift 68
	SUB  shift 69
	MUL  reduce 58
	DIV  reduce 58
	MOD  reduce 58
	INC  reduce 58
	DEC  reduce 58
	MT  reduce 58
	LT  reduce 58
	MTE  reduce 58
	LTE  reduce 58
	EQ  reduce 58
	NE  reduce 58
	RB  reduce 58
	SEMICOLON  reduce 58

	addition  goto 70


33: shift/reduce conflict (shift 71, reduce 60) on MUL
33: shift/reduce conflict (shift 72, reduce 60) on DIV
33: shift/reduce conflict (shift 73, reduce 60) on MOD
state 33
	ad_exp : mul_exp .  (60)
	mul_exp : mul_exp . multiplication postfix_exp  (63)

	MUL  shift 71
	DIV  shift 72
	MOD  shift 73
	ADD  reduce 60
	SUB  reduce 60
	INC  reduce 60
	DEC  reduce 60
	MT  reduce 60
	LT  reduce 60
	MTE  reduce 60
	LTE  reduce 60
	EQ  reduce 60
	NE  reduce 60
	RB  reduce 60
	SEMICOLON  reduce 60

	multiplication  goto 74


state 34
	mul_exp : postfix_exp .  (64)

	.  reduce 64


state 35
	postfix_exp : term . postfix  (65)
	postfix : .  (68)

	.  reduce 68

	postfix  goto 75


state 36
	print_func : PRINT LB . STR_CONST RB SEMICOLON  (88)
	print_func : PRINT LB . ID RB SEMICOLON  (89)

	STR_CONST  shift 76
	ID  shift 77
	.  error


state 37
	selection_stat : IF LB . exp RB LCB stat_list RCB  (34)
	selection_stat : IF LB . exp RB LCB stat_list RCB ELSE LCB stat_list RCB  (35)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 78
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 38
	iteration_stat : WHILE LB . exp RB LCB stat RCB  (90)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 79
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 39
	term : SUB I_CONST .  (74)

	.  reduce 74


state 40
	term : SUB F_CONST .  (75)

	.  reduce 75


state 41
	term : ID .  (70)

	.  reduce 70


42: shift/reduce conflict (shift 60, reduce 76) on MT
42: shift/reduce conflict (shift 61, reduce 76) on LT
42: shift/reduce conflict (shift 62, reduce 76) on MTE
42: shift/reduce conflict (shift 63, reduce 76) on LTE
42: shift/reduce conflict (shift 64, reduce 76) on EQ
42: shift/reduce conflict (shift 65, reduce 76) on NE
42: shift/reduce conflict (shift 80, reduce 76) on RB
state 42
	exp : exp . comparison ad_exp  (57)
	term : LB exp . RB  (69)
	term : exp .  (76)

	MT  shift 60
	LT  shift 61
	MTE  shift 62
	LTE  shift 63
	EQ  shift 64
	NE  shift 65
	RB  shift 80
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	MOD  reduce 76
	INC  reduce 76
	DEC  reduce 76

	comparison  goto 67


state 43
	compound_stat : LCB RCB .  (55)

	.  reduce 55


state 44
	stat_list : stat_list . stat  (3)
	compound_stat : LCB stat_list . RCB  (56)

	PRINT  shift 3
	IF  shift 4
	WHILE  shift 5
	SUB  shift 6
	LB  shift 7
	LCB  shift 8
	RCB  shift 81
	RET  shift 9
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	INT  shift 13
	STRING  shift 14
	FLOAT  shift 15
	BOOL  shift 16
	VOID  shift 17
	ID  shift 18
	.  error

	init_declarator  goto 19
	func_declaration  goto 20
	Type  goto 21
	stat  goto 22
	compound_stat  goto 23
	exp  goto 24
	print_func  goto 25
	func_def  goto 26
	func_usage  goto 27
	selection_stat  goto 28
	iteration_stat  goto 29
	return_state  goto 30
	asign_state  goto 31
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 45
	return_state : RET SEMICOLON .  (31)

	.  reduce 31


state 46
	return_state : RET TRUE . SEMICOLON  (32)

	SEMICOLON  shift 82
	.  error


state 47
	return_state : RET FALSE . SEMICOLON  (33)

	SEMICOLON  shift 83
	.  error


48: shift/reduce conflict (shift 60, reduce 76) on MT
48: shift/reduce conflict (shift 61, reduce 76) on LT
48: shift/reduce conflict (shift 62, reduce 76) on MTE
48: shift/reduce conflict (shift 63, reduce 76) on LTE
48: shift/reduce conflict (shift 64, reduce 76) on EQ
48: shift/reduce conflict (shift 65, reduce 76) on NE
48: shift/reduce conflict (shift 84, reduce 76) on SEMICOLON
state 48
	return_state : RET exp . SEMICOLON  (30)
	exp : exp . comparison ad_exp  (57)
	term : exp .  (76)

	MT  shift 60
	LT  shift 61
	MTE  shift 62
	LTE  shift 63
	EQ  shift 64
	NE  shift 65
	SEMICOLON  shift 84
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	MOD  reduce 76
	INC  reduce 76
	DEC  reduce 76

	comparison  goto 67


state 49
	func_usage : ID LB . aug_list RB SEMICOLON  (43)
	aug_list : .  (48)

	.  reduce 48

	aug_list  goto 85


state 50
	asgn_type : ASGN .  (91)

	.  reduce 91


state 51
	asgn_type : ADDASGN .  (92)

	.  reduce 92


state 52
	asgn_type : SUBASGN .  (93)

	.  reduce 93


state 53
	asgn_type : MULASGN .  (94)

	.  reduce 94


state 54
	asgn_type : DIVASGN .  (95)

	.  reduce 95


state 55
	asgn_type : MODASGN .  (96)

	.  reduce 96


state 56
	asign_state : ID asgn_type . initializer SEMICOLON  (27)
	asign_state : ID asgn_type . ID SEMICOLON  (28)
	asign_state : ID asgn_type . exp SEMICOLON  (29)

	SUB  shift 6
	LB  shift 7
	TRUE  shift 86
	FALSE  shift 87
	I_CONST  shift 88
	F_CONST  shift 89
	STR_CONST  shift 90
	ID  shift 91
	.  error

	exp  goto 92
	initializer  goto 93
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 57
	init_declarator : Type ID . ASGN exp SEMICOLON  (17)
	vars : ID .  (20)
	vars : ID . ASGN initializer  (21)
	func_def : Type ID . LB para_list RB LCB compound_stat return_state RCB  (36)
	func_def : Type ID . LB para_list RB LCB return_state RCB  (37)
	func_def : Type ID . LB para_list RB LCB stat_list return_state RCB  (38)
	func_def : Type ID . LB RB LCB compound_stat return_state RCB  (39)
	func_def : Type ID . LB RB LCB stat_list return_state RCB  (40)
	func_def : Type ID . LB RB LCB return_state RCB  (41)
	func_declaration : Type ID . LB para_list RB SEMICOLON  (42)

	LB  shift 94
	ASGN  shift 95
	COMMA  reduce 20
	SEMICOLON  reduce 20


state 58
	init_declarator_list : vars .  (18)

	.  reduce 18


state 59
	init_declarator : Type init_declarator_list . SEMICOLON  (16)
	init_declarator_list : init_declarator_list . COMMA vars  (19)

	COMMA  shift 96
	SEMICOLON  shift 97
	.  error


state 60
	comparison : MT .  (77)

	.  reduce 77


state 61
	comparison : LT .  (78)

	.  reduce 78


state 62
	comparison : MTE .  (79)

	.  reduce 79


state 63
	comparison : LTE .  (80)

	.  reduce 80


state 64
	comparison : EQ .  (81)

	.  reduce 81


state 65
	comparison : NE .  (82)

	.  reduce 82


state 66
	stat : exp SEMICOLON .  (7)

	.  reduce 7


state 67
	exp : exp comparison . ad_exp  (57)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 98
	ad_exp  goto 99
	mul_exp  goto 33
	postfix_exp  goto 34
	term  goto 35


state 68
	addition : ADD .  (61)

	.  reduce 61


state 69
	addition : SUB .  (62)

	.  reduce 62


state 70
	ad_exp : ad_exp addition . mul_exp  (59)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 98
	ad_exp  goto 32
	mul_exp  goto 100
	postfix_exp  goto 34
	term  goto 35


state 71
	multiplication : MUL .  (85)

	.  reduce 85


state 72
	multiplication : DIV .  (86)

	.  reduce 86


state 73
	multiplication : MOD .  (87)

	.  reduce 87


state 74
	mul_exp : mul_exp multiplication . postfix_exp  (63)

	SUB  shift 6
	LB  shift 7
	I_CONST  shift 10
	F_CONST  shift 11
	STR_CONST  shift 12
	ID  shift 41
	.  error

	exp  goto 98
	ad_exp  goto 32
	mul_exp  goto 33
	postfix_exp  goto 101
	term  goto 35


75: shift/reduce conflict (shift 102, reduce 65) on INC
75: shift/reduce conflict (shift 103, reduce 65) on DEC
state 75
	postfix_exp : term postfix .  (65)
	postfix : postfix . INC  (66)
	postfix : postfix . DEC  (67)

	INC  shift 102
	DEC  shift 103
	ADD  reduce 65
	SUB  reduce 65
	MUL  reduce 65
	DIV  reduce 65
	MOD  reduce 65
	MT  reduce 65
	LT  reduce 65
	MTE  reduce 65
	LTE  reduce 65
	EQ  reduce 65
	NE  reduce 65
	RB  reduce 65
	SEMICOLON  reduce 65


state 76
	print_func : PRINT LB STR_CONST . RB SEMICOLON  (88)

	RB  shift 104
	.  error


state 77
	print_func : PRINT LB ID . RB SEMICOLON  (89)

	RB  shift 105
	.  error


78: shift/reduce conflict (shift 60, reduce 76) on MT
78: shift/reduce conflict (shift 61, reduce 76) on LT
78: shift/reduce conflict (shift 62, reduce 76) on MTE
78: shift/reduce conflict (shift 63, reduce 76) on LTE
78: shift/reduce conflict (shift 64, reduce 76) on EQ
78: shift/reduce conflict (shift 65, reduce 76) on NE
78: shift/reduce conflict (shift 106, reduce 76) on RB
state 78
	selection_stat : IF LB exp . RB LCB stat_list RCB  (34)
	selection_stat : IF LB exp . RB LCB stat_list RCB ELSE LCB stat_list RCB  (35)
	exp : exp . comparison ad_exp  (57)
	term : exp .  (76)

	MT  shift 60
	LT  shift 61
	MTE  shift 62
	LTE  shift 63
	EQ  shift 64
	NE  shift 65
	RB  shift 106
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	MOD  reduce 76
	INC  reduce 76
	DEC  reduce 76

	comparison  goto 67


79: shift/reduce conflict (shift 60, reduce 76) on MT
79: shift/reduce conflict (shift 61, reduce 76) on LT
79: shift/reduce conflict (shift 62, reduce 76) on MTE
79: shift/reduce conflict (shift 63, reduce 76) on LTE
79: shift/reduce conflict (shift 64, reduce 76) on EQ
79: shift/reduce conflict (shift 65, reduce 76) on NE
79: shift/reduce conflict (shift 107, reduce 76) on RB
state 79
	exp : exp . comparison ad_exp  (57)
	term : exp .  (76)
	iteration_stat : WHILE LB exp . RB LCB stat RCB  (90)

	MT  shift 60
	LT  shift 61
	MTE  shift 62
	LTE  shift 63
	EQ  shift 64
	NE  shift 65
	RB  shift 107
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	MOD  reduce 76
	INC  reduce 76
	DEC  reduce 76

	comparison  goto 67


state 80
	term : LB exp RB .  (69)

	.  reduce 69


state 81
	compound_stat : LCB stat_list RCB .  (56)

	.  reduce 56


state 82
	return_state : RET TRUE SEMICOLON .  (32)

	.  reduce 32


state 83
	return_state : RET FALSE SEMICOLON .  (33)

	.  reduce 33


state 84
	return_state : RET exp SEMICOLON .  (30)

	.  reduce 30


state 85
	func_usage : ID LB aug_list . RB SEMICOLON  (43)
	aug_list : aug_list . aug  (46)
	aug_list : aug_list . COMMA aug  (47)

	RB  shift 108
	COMMA  shift 109
	TRUE  shift 110
	FALSE  shift 111
	I_CONST  shift 112
	F_CONST  shift 113
	STR_CONST  shift 114
	ID  shift 115
	.  error

	aug  goto 116


state 86
	initializer : TRUE .  (25)

	.  reduce 25


state 87
	initializer : FALSE .  (26)

	.  reduce 26


88: reduce/reduce conflict (reduce 22, reduce 72) on SEMICOLON
state 88
	initializer : I_CONST .  (22)
	term : I_CONST .  (72)

	ADD  reduce 72
	SUB  reduce 72
	MUL  reduce 72
	DIV  reduce 72
	MOD  reduce 72
	INC  reduce 72
	DEC  reduce 72
	MT  reduce 72
	LT  reduce 72
	MTE  reduce 72
	LTE  reduce 72
	EQ  reduce 72
	NE  reduce 72
	COMMA  reduce 22
	SEMICOLON  reduce 22


89: reduce/reduce conflict (reduce 23, reduce 73) on SEMICOLON
state 89
	initializer : F_CONST .  (23)
	term : F_CONST .  (73)
